MMA-8503 Oppgrader til Spring Boot 4.0.4
- Parent POM 3.5.7 → 4.0.4
- Renamed starters: web → webmvc, spring-kafka → spring-boot-starter-kafka
- spring-retry → Spring native `@Retryable` / `@EnableResilientMethods`
- Jackson 2 → 3: ObjectMapper → JsonMapper, tools.jackson.* packages
- spring-cloud-contract-wiremock → wiremock-spring-boot
- Camel 4.18.1 → 4.20.0, logstash-logback-encoder 8.1 → 9.0
- Health indicator: jms → camelHealth
- Add spring-boot-restclient, spring-boot-starter-aspectj
- Replace HttpCodecsProperties with @Value injection
- Add JmsTemplate bean to test config (Boot 4 requirement)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>